--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.3
   retrofit: ^4.0.1
+  dio: ^5.3.2
+  retrofit_generator: ^6.0.0+3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
