--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,16 @@ dependencies:
   retrofit: ^4.0.1
   dio: ^5.3.2
   retrofit_generator: ^6.0.0+3
+  either_dart: ^1.0.0
+  internet_connection_checker: ^0.0.1+3
+  pretty_dio_logger: ^1.3.1
+  shared_preferences: ^2.2.0
+  flutter_bloc: ^8.1.3
+  formz: ^0.6.0
+  equatable: ^2.0.5
+  get_it: ^7.6.4
+  lottie: ^2.6.0
+ 
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +92,10 @@ flutter:
      - assets/images/invite_friends_ic.svg
      - assets/images/logout_ic.svg
      - assets/images/settings_right_arrow_ic.svg
+     - assets/json/empty.json
+     - assets/json/error.json
+     - assets/json/loading.json
+     - assets/json/success.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
