--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,11 @@ dependencies:
   lottie: ^2.6.0
   intl_phone_number_input: ^0.7.3
   image_picker: ^1.0.4
+  cloud_firestore: ^4.9.2
+  firebase_core: ^2.16.0
+  carousel_slider: ^4.2.1
+  easy_localization: ^3.0.3
+  flutter_phoenix: ^1.1.1
  
 
 dev_dependencies:
@@ -98,6 +103,8 @@ flutter:
      - assets/json/error.json
      - assets/json/loading.json
      - assets/json/success.json
+     - assets/translations/ar-SA.json
+     - assets/translations/en-US.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
